<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etcity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.awad.adam.housesforrent.rentapartment">

    <EditText
        android:id="@+id/etcity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="41dp" />

    <EditText
        android:id="@+id/etcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cost"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="101dp" />

    <EditText
        android:id="@+id/etunivardy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/univardy"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="158dp" />

    <EditText
        android:id="@+id/etpeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/people"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="216dp" />

    <Button
        android:id="@+id/btnsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="search "
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="311dp" />

    <LinearLayout
        android:layout_width="38dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"></LinearLayout>

</LinearLayout>
