<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.awad.adam.housesforrent.interyourinfo">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/etcity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/City"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cost"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPeople"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/people"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnAddTorentTist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="add torent tist" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
